--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,12 @@ go:
   - 1.6.x
   - 1.10.x
   - release
-  - tip
 
-install: true
-
-matrix:
-  allow_failures:
-    - go: tip
-  fast_finish: true
-
-notifications:
-  email: true
-
-before_script:
-  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/)
-  - go get github.com/golang/lint/golint
-  - go get honnef.co/go/tools/cmd/megacheck
-  - go get github.com/fzipp/gocyclo
+before_install:
+  - go get -t -v ./...
 
 script:
-  - test -z $(gofmt -s -l $GO_FILES)
   - go test -race -coverprofile=coverage.txt -covermode=atomic
-  - go vet ./...
-  - megacheck ./...
-  - gocyclo -over 19 $GO_FILES
-  - golint -set_exit_status $(go list ./...)
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
